--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/minji_db
+    url: jdbc:mysql://127.0.0.1:3307/minji_db
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
@@ -15,5 +15,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
-          auto: update
+          auto: create
         default_batch_fetch_size: 1000
