--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
         hbm2ddl:
           auto: update
         default_batch_fetch_size: 1000
+
+# application.yml
+cors:
+  allowed-origin: "http://localhost:5173"  # 허용할 출처
+  allowed-methods: "GET,POST,PUT,DELETE"   # 허용할 메서드들 (쉼표로 구분)
