--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ java {
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
-
 	}
 }
 
@@ -25,25 +24,36 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot 기본 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	compileOnly 'org.projectlombok:lombok'
+	// Spring Batch 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
+
+	// 스케줄링 의존성 (Spring Scheduler)
+	implementation 'org.springframework.boot:spring-boot-starter'
+
+	// MySQL 드라이버
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	//swager 의존성
+	// Swagger (Springdoc)
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
+	// Spring Security & JWT
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework.security:spring-security-web'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
+	// Testing
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
