--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/minji_db
+    url: jdbc:mysql://localhost:3307/minji_db
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
@@ -23,3 +23,11 @@ task:
   scheduling:
     cron:
       reset-weekly: 0 0 0 * * MON  # 매주 월요일 00:00에 실행
+
+cors:
+  allowed-origin: "*"
+  allowed-methods:
+    - GET
+    - POST
+    - PUT
+    - DELETE
