--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/minji_db
+    url: jdbc:mysql://127.0.0.1:3306/minji_db
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
+  sql:
+    init:
+      mode: never
   jpa:
     hibernate:
       ddl-auto: update
